--- a/_config.yml
+++ b/_config.yml
@@ -34,15 +34,15 @@ resume-url: https://drive.google.com/file/d/13Z3duVzh-gguPU5r03oJVEE6rV9rd3DS/vi
 
 external-links:    # input only your own url slug. The icons with missing entries will not appear.
   linkedin: www.linkedin.com/in/rafi-indrajaya    # https://www.linkedin.com/in/{your url slug} 
-  github:     # https://github.com/{your url slug} 
-  stackoverflow:       # https://stackoverflow.com/users/{your url slug}
-  medium:            # https://medium.com/@{your url slug} 
-  x-twitter:   # https://x.com/{your url slug} 
-  threads:            # https://threads.net/@{your url slug} 
-  instragram:       # https://instagram.com/{your url slug} 
-  youtube:           # https://youtube.com/@{your url slug} 
-  discord:            # https://discord.com/users/{your url slug} 
-  bluesky:           # https://bsky.app/profile/{your url slug} 
+  #github:     # https://github.com/{your url slug} 
+  #stackoverflow:       # https://stackoverflow.com/users/{your url slug}
+  #medium:            # https://medium.com/@{your url slug} 
+  #x-twitter:   # https://x.com/{your url slug} 
+  #threads:            # https://threads.net/@{your url slug} 
+  #instragram:       # https://instagram.com/{your url slug} 
+  #youtube:           # https://youtube.com/@{your url slug} 
+  #discord:            # https://discord.com/users/{your url slug} 
+  #bluesky:           # https://bsky.app/profile/{your url slug} 
   
 
 # Skills Section - Add the list of your Skills by categories/tools. The indentation for each level needs to be precise. 
@@ -92,24 +92,24 @@ formspree-key:   https://formspree.io/f/mqadkooo
 
 
 # Active theme (Updatethis to switch themes). Make sure to keep the indentation the samne.
-colors: # this is the basic theme
-  text: "#1a1c20"
-  border: "#ddd"
-  link: "#4a76ee"
-  highlight: "#0c0cf2"
-  background: "#ffffff"
-  light_background: "#f3f5fb"
+#colors: # this is the basic theme
+ # text: "#1a1c20"
+  #border: "#ddd"
+  #link: "#4a76ee"
+  #highlight: "#0c0cf2"
+  #background: "#ffffff"
+  #light_background: "#f3f5fb"
 
 # A few examples. 
-basic theme:
-  text: "#1a1c20"
-  border: "#ddd"
-  link: "#4a76ee"
-  highlight: "#0c0cf2"
-  background: "#ffffff"
-  light_background: "#f3f5fb"
+#basic theme:
+  #text: "#1a1c20"
+  #border: "#ddd"
+  #link: "#4a76ee"
+  #highlight: "#0c0cf2"
+  #background: "#ffffff"
+  #light_background: "#f3f5fb"
   
-  mint theme:
+mint theme:
   text: "#2c3333"
   border: "#e0f2ef"
   link: "#40b3a2"
@@ -117,21 +117,21 @@ basic theme:
   background: "#f7fbfa"
   light_background: "#f0f9f7"
   
-lemon theme:
-  text: "#2d2926"
-  border: "#f7f3e3"
-  link: "#ffc94d"
-  highlight: "#ffb800"
-  background: "#fffdf5"
-  light_background: "#fff9e6"
+#lemon theme:
+ # text: "#2d2926"
+  #border: "#f7f3e3"
+  #link: "#ffc94d"
+  #highlight: "#ffb800"
+  #background: "#fffdf5"
+  #light_background: "#fff9e6"
   
-  pink theme:
-  text: "#2d2d2d"
-  border: "#f8e2e2"
-  link: "#ff8fa3"
-  highlight: "#ff4d6d"
-  background: "#fff8f8"
-  light_background: "#fff5f6"
+  #pink theme:
+  #text: "#2d2d2d"
+  #border: "#f8e2e2"
+  #link: "#ff8fa3"
+  #highlight: "#ff4d6d"
+  #background: "#fff8f8"
+  #light_background: "#fff5f6"
 
 
 
