--- a/_config.yml
+++ b/_config.yml
@@ -14,12 +14,12 @@ title: Rafi Indrajaya's Portfolio # This is what shows up in the tab of the brow
 # Hero Section
 name: Rafi Indrajaya
 headline: Clean Energy System Engineer
-description: >- # dont remove this line. this will ignore all new lines until the next section
-Hello there, welcome to my porfolio page!
+description: Hello there, welcome to my porfolio page!
 I’m a master’s student in the Erasmus Mundus DENSYS program, specializing in clean energy, hydrogen technologies, and sustainable power systems. 
 With international experience across transportation and power generation, I combine technical expertise in renewable integration with strong 
 analytical skills in Python, SQL, and energy modeling. My journey spans fuel cells, geothermal systems, and Power-to-Hydrogen solutions
 — all driven by my passion for creating innovative, sustainable energy future.
+
 
 # Place your profile image in /assets/images/profile-image/folder and edit the file name
 profile_image: ./assets/images/profile-image/avatar.jpeg
