--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ title: Rafi Indrajaya's Portfolio # This is what shows up in the tab of the brow
 name: Rafi Indrajaya
 headline: Clean Energy System Engineer
 description: |
-  Hello there, welcome to my porfolio page!
+  Hello there, welcome to my porfolio page! ---
   I’m a master’s student in the Erasmus Mundus DENSYS program, specializing in clean energy, hydrogen technologies, and sustainable power systems. 
   With international experience across transportation and power generation, I combine technical expertise in renewable integration with strong 
   analytical skills in Python, SQL, and energy modeling. My journey spans fuel cells, geothermal systems, and Power-to-Hydrogen solutions
