--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ description: |
 
 
 # Place your profile image in /assets/images/profile-image/folder and edit the file name
-profile_image: ./assets/images/profile-image/Bosch ID Photo Rafi 3 copy.png
+profile_image: ./assets/images/profile-image/ID Photo Rafi 3 copy.jpeg
 
 
 # Link your resume
