--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ description: |
 
 
 # Place your profile image in /assets/images/profile-image/folder and edit the file name
-profile_image: ./assets/images/profile-image/ID Photo Rafi 3 copy.jpeg
+profile_image: ./assets/images/profile-image/profilepp.jpeg
 
 
 # Link your resume
