--- a/_config.yml
+++ b/_config.yml
@@ -94,13 +94,13 @@ formspree-key:   https://formspree.io/f/mqadkooo
 
 
 # Active theme (Updatethis to switch themes). Make sure to keep the indentation the samne.
-#colors: # this is the basic theme
- # text: "#1a1c20"
-  #border: "#ddd"
-  #link: "#4a76ee"
-  #highlight: "#0c0cf2"
-  #background: "#ffffff"
-  #light_background: "#f3f5fb"
+colors: # this is the basic theme
+  text: "#1a1c20"
+  border: "#ddd"
+  link: "#4a76ee"
+  highlight: "#0c0cf2"
+  background: "#ffffff"
+  light_background: "#f3f5fb"
 
 # A few examples. 
 #basic theme:
@@ -111,13 +111,13 @@ formspree-key:   https://formspree.io/f/mqadkooo
   #background: "#ffffff"
   #light_background: "#f3f5fb"
   
-mint theme:
-  text: "#2c3333"
-  border: "#e0f2ef"
-  link: "#40b3a2"
-  highlight: "#2a9d8f"
-  background: "#f7fbfa"
-  light_background: "#f0f9f7"
+#mint theme:
+  #text: "#2c3333"
+  #border: "#e0f2ef"
+  #link: "#40b3a2"
+  #highlight: "#2a9d8f"
+  #background: "#f7fbfa"
+  #light_background: "#f0f9f7"
   
 #lemon theme:
  # text: "#2d2926"
