--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ description: |
 
 
 # Place your profile image in /assets/images/profile-image/folder and edit the file name
-profile_image: ./assets/images/profile-image/profilepp.jpeg
+profile_image: assets/images/profile-image/DSC08446-medium.jpeg
 
 
 # Link your resume
