--- a/_config.yml
+++ b/_config.yml
@@ -17,9 +17,9 @@ headline: Clean Energy System Engineer
 description: |
   Hello there, welcome to my porfolio page! 
   <br>
-  I’m a master’s student in the Erasmus Mundus DENSYS program, specializing in clean energy, hydrogen technologies, and sustainable power systems. 
-  With international experience across transportation and power generation, I combine technical expertise in renewable integration with strong 
-  analytical skills in Python, SQL, and energy modeling. My journey spans fuel cells, geothermal systems, and Power-to-Hydrogen solutions
+  I’m a master’s student in the Erasmus Mundus Decentralized Smart Energy System (DENSYS) program, specializing in clean energy, hydrogen technologies, and sustainable power systems. 
+  With international experience across transportation and power generation industries, I have technical expertise in renewable integration with strong 
+  analytical skills using tools such as Python, SQL, and energy modeling. My journey spans fuel cells, geothermal power plant modelling, microgrid modelling & control system, and Power-to-Hydrogen solutions
   — all driven by my passion for creating innovative, sustainable energy future.
 
 
