--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ description: |
   <br>
   I’m a master’s student in the Erasmus Mundus Decentralized Smart Energy System (DENSYS) program, specializing in clean energy, hydrogen technologies, and sustainable power systems. 
   With international experience across transportation and power generation industries, I have technical expertise in renewables integration with strong 
-  analytical skills using tools such as Python (PyPSA, Pyomo, PyPSA, Pandas), Matlab/Simulink, and Homer Pro, to establish smooth transition to clean power system without compromising profitability and supply stability. My journey spans fuel cell & Electrolyzer technologies, geothermal power plant modelling, microgrid modelling & control system, and Power-to-Hydrogen solutions
+  analytical and modelling skills using tools such as Python (PyPSA, Pyomo, PyPSA, Pandas), Matlab/Simulink, and Homer Pro, to establish smooth green transition without compromising profitability and grid integrity. My journey spans fuel cell & Electrolyzer technologies, geothermal power plant modelling, microgrid modelling & control system, and Power-to-Hydrogen solutions
   — all driven by my passion for creating innovative, sustainable energy future.
 
 
