--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ profile_image: assets/images/profile-image/DSC08446-large.jpeg
 
 # Link your resume
 # You can place your resume in assets/resume/{resume.pdf or add external link such as pdf saved in google drive 
-resume-url: assets/CV
+resume-url: /assets/CV Rafi 2025 DENSYS Vattenfall.pdf
 
 
 # Set up external links - this will show up as small icons next to your name.
