--- a/_config.yml
+++ b/_config.yml
@@ -20,8 +20,8 @@ description: |
   <br>
   
   I’m a master’s student in the Erasmus Mundus Decentralized Smart Energy System (DENSYS) program, specializing in clean energy, hydrogen technologies, and sustainable power systems. 
-  With international experience across transportation and power generation industries, I have technical expertise in renewables integration with strong 
-  analytical and modelling skills using tools such as Python (PyPSA, Pyomo, PyPSA, Pandas), Matlab/Simulink, and Homer Pro, to establish smooth green transition without compromising profitability and grid integrity. My journey spans fuel cell & Electrolyzer technologies, geothermal power plant modelling, microgrid modelling & control system, and Power-to-Hydrogen solutions
+  With international experience across mobility and power generation industries, I have technical expertise in renewables integration with strong 
+  analytical and modelling skills using tools such as Python (Pyomo, PyPSA, Pandas, Scikit-learn), Matlab/Simulink, and Homer Pro, to establish smooth green transition without compromising profitability and grid integrity. My journey spans fuel cell & Electrolyzer technologies, geothermal power plant modelling, microgrid modelling & control system, and Power-to-Hydrogen solutions
   — all driven by my passion for creating innovative, sustainable energy future.
 
 
