--- a/_config.yml
+++ b/_config.yml
@@ -20,9 +20,9 @@ description: |
   <br>
   
   I’m a master’s student in the Erasmus Mundus Decentralized Smart Energy System (DENSYS) program, specializing in clean energy, hydrogen technologies, and sustainable power systems. 
-  With international experience across mobility and power generation industries, I have technical expertise in renewables integration with strong 
-  analytical and modelling skills using tools such as Python (Pyomo, PyPSA, Pandas, Scikit-learn), Matlab/Simulink, and Homer Pro, to establish smooth green transition without compromising profitability and grid integrity. My journey spans fuel cell & Electrolyzer technologies, geothermal power plant modelling, microgrid modelling & control system, and Power-to-Hydrogen solutions
-  — all driven by my passion for creating innovative, sustainable energy future.
+  With international experience spanning the mobility and power generation industries, I possess technical expertise in renewable energy integration, backed by strong analytical and modeling skills. 
+  I utilize tools such as Python (Pyomo, PyPSA, Pandas, Scikit-learn), MATLAB/Simulink, and Homer Pro to facilitate a smooth green transition without compromising profitability or grid integrity. 
+  My journey spans fuel cell & Electrolyzer technologies, geothermal power plant modeling, microgrid modeling and control systems, and Power-to-Hydrogen solutions — all driven by my passion for creating an innovative, sustainable energy future.
 
 
 # Place your profile image in /assets/images/profile-image/folder and edit the file name
